bindings/c/include/DocumentFilters.h

	typedef wchar_t IGR_UCS2;
	typedef long IGR_LONG;
	typedef unsigned long IGR_ULONG;
typedef uint16_t IGR_UCS2;
typedef int32_t IGR_LONG;
typedef uint32_t IGR_ULONG;
	typedef short int IGR_SHORT;
	typedef int64_t IGR_LONGLONG;
	typedef IGR_LONG HPAGE;
	typedef IGR_LONG HCANVAS;
	typedef IGR_LONG IGR_RETURN_CODE;
	typedef struct tagError_Control_Block
	{
		char Msg[238];
		IGR_SHORT MsgId;
	} Error_Control_Block;
	struct IGR_Stream
	{
		ULONG(CALLBACK* Open)(struct IGR_Stream* stream);
		ULONG(CALLBACK* Read)(struct IGR_Stream* stream, void* buffer, ULONG bufferSize);
		IGR_LONGLONG(CALLBACK* Seek)(struct IGR_Stream* stream, IGR_LONGLONG offset, ULONG whence);
		void(CALLBACK* Close)(struct IGR_Stream* stream);
	};
	struct IGR_Writable_Stream
	{
		struct IGR_Stream base;
		ULONG(CALLBACK* Write)(struct IGR_Writable_Stream* stream, void* buffer, ULONG bufferSize);
	};
	struct IGR_Rect
	{
		IGR_ULONG left;
		IGR_ULONG top;
		IGR_ULONG right;
		IGR_ULONG bottom;
	};
	struct IGR_Page_Word
	{
		IGR_LONG x;
		IGR_LONG y;
		IGR_LONG width;
		IGR_LONG height;
		IGR_LONG style;
		const IGR_UCS2* word;
		IGR_LONG wordLength;
		IGR_LONG charoffset;
		IGR_LONG reserved[8];
	};
	struct IGR_Bookmark
	{
		const void* reserved;
		IGR_LONG flags;
		IGR_UCS2 title[255];
		IGR_BOOKMARK_ACTION_TYPE action;
		IGR_UCS2 dest[1024];
		IGR_LONG level;
		IGR_BOOKMARK_FIT_TYPE fit;
		IGR_LONG zoom;
		IGR_LONG x;
		IGR_LONG y;
		IGR_LONG width;
		IGR_LONG height;
		IGR_LONG color;
		IGR_LONG text_style;
		IGR_LONG reserved2[8];
	};
	typedef IGR_LONG (*IGR_CALLBACK)(int actionID, void* actionData, void* context);
	struct IGR_Render_Page_Form_Values
	{
		const IGR_UCS2* name;
		const IGR_UCS2* value;
		IGR_LONG selected;
	};
	struct IGR_Render_Page_Redactions
	{
		IGR_LONG x;
		IGR_LONG y;
		IGR_LONG width;
		IGR_LONG height;
		IGR_COLOR_TYPE color;
		IGR_ULONG reserved;
	};
	struct IGR_Render_Page_Properties
	{
		IGR_ULONG struct_size;
		IGR_ULONG form_value_count;
		const struct IGR_Render_Page_Form_Values* form_values;
		IGR_REDACT_FLAGS_TYPE redaction_flags;
		IGR_ULONG redaction_count;
		const struct IGR_Render_Page_Redactions* redactions;
		struct IGR_Rect source_rect;
		struct IGR_Rect dest_rect;
	};
	IGR_RETURN_CODE IGR_EXPORT IGR_Open_File_Ex(const IGR_UCS2* filename, IGR_OPEN_FLAGS_TYPE flags, const IGR_UCS2* options,
	                                            IGR_FILE_SUPPORTS_TYPE* capabilities, IGR_LONG* filetype, IGR_LONG* handle,
	                                            Error_Control_Block* error);
	IGR_RETURN_CODE IGR_EXPORT IGR_Open_Stream_Ex(struct IGR_Stream* stream, IGR_OPEN_FLAGS_TYPE flags, const IGR_UCS2* options,
	                                              IGR_FILE_SUPPORTS_TYPE* capabilities, IGR_LONG* file_type, IGR_LONG* handle,
	                                              Error_Control_Block* error);
	IGR_RETURN_CODE IGR_EXPORT IGR_Get_Text(IGR_LONG handle, IGR_UCS2* buffer, IGR_LONG* bufferSize, Error_Control_Block* error);
	IGR_RETURN_CODE IGR_EXPORT IGR_Get_Subfile_Entry(IGR_LONG handle, IGR_UCS2* id, IGR_UCS2* name, IGR_LONGLONG* date, IGR_LONGLONG* size,
	                                                 Error_Control_Block* error);
	IGR_RETURN_CODE IGR_EXPORT IGR_Extract_Subfile(IGR_LONG handle, const IGR_UCS2* id, const IGR_UCS2* destination,
	                                               Error_Control_Block* error);
	IGR_RETURN_CODE IGR_EXPORT IGR_Extract_Subfile_Stream(IGR_LONG handle, const IGR_UCS2* id, struct IGR_Stream** stream,
	                                                      Error_Control_Block* error);
	IGR_RETURN_CODE IGR_EXPORT IGR_Close_File(IGR_LONG handle, Error_Control_Block* error);
	IGR_RETURN_CODE IGR_EXPORT IGR_Multiplex(IGR_LONG function, size_t* param1, size_t* param2, Error_Control_Block* error);
	IGR_RETURN_CODE IGR_EXPORT IGR_Convert_File(const IGR_UCS2* filename, IGR_OPEN_FLAGS_TYPE flags, const IGR_UCS2* options,
	                                            const IGR_UCS2* output, Error_Control_Block* error);
	IGR_RETURN_CODE IGR_EXPORT IGR_Make_Stream_From_File(const IGR_UCS2* filename, IGR_LONG flags, struct IGR_Stream** stream,
	                                                     Error_Control_Block* error);
	IGR_RETURN_CODE IGR_EXPORT IGR_Make_Stream_From_Memory(void* buffer, size_t bufferSize, void* destruct, struct IGR_Stream** stream,
	                                                       Error_Control_Block* error);
	IGR_RETURN_CODE IGR_EXPORT IGR_Make_Stream_From_Functions(void* context, IGR_MAKE_STREAM_FROM_FUNCTIONS_FLAGS_TYPE flags,
	                                                          IGR_LONGLONG(CALLBACK* seek)(void* context, IGR_LONGLONG offset,
	                                                                                       IGR_ULONG whence),
	                                                          IGR_ULONG(CALLBACK* read)(void* context, void* buffer, IGR_ULONG buffer_size),
	                                                          IGR_ULONG(CALLBACK* write)(void* context, const void* buffer,
	                                                                                     IGR_ULONG buffer_size),
	                                                          IGR_LONG(CALLBACK* action)(void* context, int actionId, void* action_data),
	                                                          void(CALLBACK* destruct)(void* context), struct IGR_Stream** stream,
	                                                          Error_Control_Block* error);
	IGR_RETURN_CODE IGR_EXPORT IGR_Extend_Stream(struct IGR_Stream* pStream, IGR_CALLBACK cb, void* context,
	                                             struct IGR_Stream** ppExtStream, Error_Control_Block* error);
	size_t IGR_EXPORT IGR_Get_Memory_Status(char* buffer, size_t len);
	IGR_RETURN_CODE IGR_EXPORT IGR_Get_Image_Entry(IGR_LONG handle, IGR_UCS2* id, IGR_UCS2* name, IGR_LONGLONG* date, IGR_LONGLONG* size,
	                                               Error_Control_Block* error);
	IGR_RETURN_CODE IGR_EXPORT IGR_Extract_Image(IGR_LONG handle, const IGR_UCS2* id, const IGR_UCS2* destination,
	                                             Error_Control_Block* error);
	IGR_RETURN_CODE IGR_EXPORT IGR_Extract_Image_Stream(IGR_LONG handle, const IGR_UCS2* id, struct IGR_Stream** stream,
	                                                    Error_Control_Block* error);
	IGR_RETURN_CODE IGR_EXPORT IGR_Calculate_MD5(struct IGR_Stream* stream, IGR_UCS2* dest, Error_Control_Block* error);
	IGR_RETURN_CODE IGR_EXPORT IGR_Calculate_SHA1(struct IGR_Stream* stream, IGR_UCS2* dest, Error_Control_Block* error);
	IGR_RETURN_CODE IGR_EXPORT IGR_Get_Page_Count(IGR_LONG docHandle, IGR_LONG* pageCount, Error_Control_Block* error);
	IGR_RETURN_CODE IGR_EXPORT IGR_Open_Page(IGR_LONG docHandle, IGR_LONG pageIndex, HPAGE* pageHandle, Error_Control_Block* error);
	IGR_RETURN_CODE IGR_EXPORT IGR_Close_Page(HPAGE pageHandle, Error_Control_Block* error);
	IGR_RETURN_CODE IGR_EXPORT IGR_Get_Page_Word_Count(HPAGE pageHandle, IGR_LONG* wordCount, Error_Control_Block* error);
	IGR_RETURN_CODE IGR_EXPORT IGR_Get_Page_Words(HPAGE pageHandle, IGR_LONG index, IGR_LONG* count, struct IGR_Page_Word* words,
	                                              Error_Control_Block* error);
	IGR_RETURN_CODE IGR_EXPORT IGR_Get_Page_Dimensions(HPAGE pageHandle, IGR_LONG* width, IGR_LONG* height, Error_Control_Block* error);
	IGR_RETURN_CODE IGR_EXPORT IGR_Get_Page_Text(HPAGE pageHandle, IGR_UCS2* buffer, IGR_LONG* size, Error_Control_Block* error);
	IGR_RETURN_CODE IGR_EXPORT IGR_Get_Page_Image_Entry(HPAGE pageHandle, IGR_UCS2* id, IGR_UCS2* name, IGR_LONGLONG* date,
	                                                    IGR_LONGLONG* size, Error_Control_Block* error);
	IGR_RETURN_CODE IGR_EXPORT IGR_Extract_Page_Image(HPAGE pageHandle, const IGR_UCS2* id, const IGR_UCS2* destination,
	                                                  Error_Control_Block* error);
	IGR_RETURN_CODE IGR_EXPORT IGR_Extract_Page_Image_Stream(HPAGE pageHandle, const IGR_UCS2* id, struct IGR_Stream** stream,
	                                                         Error_Control_Block* error);
	IGR_RETURN_CODE IGR_EXPORT IGR_Get_Bookmark_Root(IGR_LONG docHandle, struct IGR_Bookmark* dest, Error_Control_Block* error);
	IGR_RETURN_CODE IGR_EXPORT IGR_Get_Bookmark_First_Child(IGR_LONG docHandle, const struct IGR_Bookmark* root, struct IGR_Bookmark* dest,
	                                                        Error_Control_Block* error);
	IGR_RETURN_CODE IGR_EXPORT IGR_Get_Bookmark_Next_Sibling(IGR_LONG docHandle, const struct IGR_Bookmark* root, struct IGR_Bookmark* dest,
	                                                         Error_Control_Block* error);
	IGR_RETURN_CODE IGR_EXPORT IGR_Make_Output_Canvas(IGR_DEVICE_TYPE type, const IGR_UCS2* filename, const IGR_UCS2* options,
	                                                  HCANVAS* canvasHandle, Error_Control_Block* error);
	IGR_RETURN_CODE IGR_EXPORT IGR_Make_Output_Canvas_On(IGR_DEVICE_TYPE type, struct IGR_Writable_Stream* stream, const IGR_UCS2* options,
	                                                     HCANVAS* canvasHandle, Error_Control_Block* error);
	IGR_RETURN_CODE IGR_EXPORT IGR_Close_Canvas(HCANVAS canvasHandle, Error_Control_Block* error);
	IGR_RETURN_CODE IGR_EXPORT IGR_Render_Page(HPAGE page, HCANVAS canvas, Error_Control_Block* error);
	IGR_RETURN_CODE IGR_EXPORT IGR_Render_Page_Ex(HPAGE page, HCANVAS canvas, const IGR_UCS2* options,
	                                              const struct IGR_Render_Page_Properties* properties, Error_Control_Block* error);
	IGR_RETURN_CODE IGR_EXPORT IGR_Redact_Page_Text(HPAGE page, IGR_LONG From, IGR_LONG To, IGR_LONG Type, Error_Control_Block* error);
	IGR_RETURN_CODE IGR_EXPORT IGR_Get_Page_Attribute(HPAGE page, const IGR_UCS2* name, IGR_UCS2* buffer, IGR_LONG* size,
	                                                  Error_Control_Block* error);
	IGR_RETURN_CODE IGR_EXPORT IGR_Get_Format_Attribute(IGR_LONG formatid, IGR_LONG what, char* buffer, Error_Control_Block* error);
	IGR_RETURN_CODE IGR_EXPORT IGR_Get_Option_Attribute(IGR_LONG formatid, IGR_LONG what, char* buffer, size_t bufferSize,
	                                                    Error_Control_Block* error);