bindings/python/src/DocumentFilters/DocumentFiltersAPI.py


        self.IGR_Open_File_Ex = self._libISYS11df.IGR_Open_File_Ex
        self.IGR_Open_File_Ex.argtypes = [ctypes.POINTER(None), IGR_LONG, ctypes.POINTER(None), ctypes.POINTER(IGR_LONG), ctypes.POINTER(IGR_LONG), ctypes.POINTER(IGR_LONG), ctypes.POINTER(Error_Control_Block)]
        self.IGR_Open_File_Ex.restype = IGR_RETURN_CODE

        self.IGR_Open_Stream_Ex = self._libISYS11df.IGR_Open_Stream_Ex
        self.IGR_Open_Stream_Ex.argtypes = [ctypes.POINTER(None), IGR_LONG, ctypes.POINTER(None), ctypes.POINTER(IGR_LONG), ctypes.POINTER(IGR_LONG), ctypes.POINTER(IGR_LONG), ctypes.POINTER(Error_Control_Block)]
        self.IGR_Open_Stream_Ex.restype = IGR_RETURN_CODE

        self.IGR_Get_Text = self._libISYS11df.IGR_Get_Text
        self.IGR_Get_Text.argtypes = [IGR_LONG, ctypes.POINTER(None), ctypes.POINTER(IGR_LONG), ctypes.POINTER(Error_Control_Block)]
        self.IGR_Get_Text.restype = IGR_RETURN_CODE

        self.IGR_Get_Subfile_Entry = self._libISYS11df.IGR_Get_Subfile_Entry
        self.IGR_Get_Subfile_Entry.argtypes = [IGR_LONG, ctypes.POINTER(None), ctypes.POINTER(None), ctypes.POINTER(IGR_LONGLONG), ctypes.POINTER(IGR_LONGLONG), ctypes.POINTER(Error_Control_Block)]
        self.IGR_Get_Subfile_Entry.restype = IGR_RETURN_CODE

        self.IGR_Extract_Subfile = self._libISYS11df.IGR_Extract_Subfile
        self.IGR_Extract_Subfile.argtypes = [IGR_LONG, ctypes.POINTER(None), ctypes.POINTER(None), ctypes.POINTER(Error_Control_Block)]
        self.IGR_Extract_Subfile.restype = IGR_RETURN_CODE

        self.IGR_Extract_Subfile_Stream = self._libISYS11df.IGR_Extract_Subfile_Stream
        self.IGR_Extract_Subfile_Stream.argtypes = [IGR_LONG, ctypes.POINTER(None), ctypes.POINTER(ctypes.POINTER(IGR_Stream)), ctypes.POINTER(Error_Control_Block)]
        self.IGR_Extract_Subfile_Stream.restype = IGR_RETURN_CODE

        self.IGR_Close_File = self._libISYS11df.IGR_Close_File
        self.IGR_Close_File.argtypes = [IGR_LONG, ctypes.POINTER(Error_Control_Block)]
        self.IGR_Close_File.restype = IGR_RETURN_CODE

        self.IGR_Multiplex = self._libISYS11df.IGR_Multiplex
        self.IGR_Multiplex.argtypes = [IGR_LONG, ctypes.POINTER(ctypes.c_size_t), ctypes.POINTER(ctypes.c_size_t), ctypes.POINTER(Error_Control_Block)]
        self.IGR_Multiplex.restype = IGR_RETURN_CODE

        self.IGR_Convert_File = self._libISYS11df.IGR_Convert_File
        self.IGR_Convert_File.argtypes = [ctypes.POINTER(None), IGR_LONG, ctypes.POINTER(None), ctypes.POINTER(None), ctypes.POINTER(Error_Control_Block)]
        self.IGR_Convert_File.restype = IGR_RETURN_CODE

        self.IGR_Make_Stream_From_File = self._libISYS11df.IGR_Make_Stream_From_File
        self.IGR_Make_Stream_From_File.argtypes = [ctypes.POINTER(None), IGR_LONG, ctypes.POINTER(ctypes.POINTER(IGR_Stream)), ctypes.POINTER(Error_Control_Block)]
        self.IGR_Make_Stream_From_File.restype = IGR_RETURN_CODE

        self.IGR_Make_Stream_From_Memory = self._libISYS11df.IGR_Make_Stream_From_Memory
        self.IGR_Make_Stream_From_Memory.argtypes = [ctypes.POINTER(None), ctypes.c_size_t, ctypes.POINTER(None), ctypes.POINTER(ctypes.POINTER(IGR_Stream)), ctypes.POINTER(Error_Control_Block)]
        self.IGR_Make_Stream_From_Memory.restype = IGR_RETURN_CODE

        try:
            self.IGR_Make_Stream_From_Functions = self._libISYS11df.IGR_Make_Stream_From_Functions
            self.IGR_Make_Stream_From_Functions.argtypes = [ctypes.POINTER(None), IGR_ULONG, IGR_Make_Stream_Seek, IGR_Make_Stream_Read, IGR_Make_Stream_Write, IGR_Make_Stream_Action, IGR_Make_Stream_Destruct, ctypes.POINTER(ctypes.POINTER(IGR_Stream)), ctypes.POINTER(Error_Control_Block)]
            self.IGR_Make_Stream_From_Functions.restype = IGR_RETURN_CODE
        except AttributeError:
            self.IGR_Make_Stream_From_Functions = None

        self.IGR_Extend_Stream = self._libISYS11df.IGR_Extend_Stream
        self.IGR_Extend_Stream.argtypes = [ctypes.POINTER(None), IGR_CALLBACK, ctypes.POINTER(None), ctypes.POINTER(ctypes.POINTER(IGR_Stream)), ctypes.POINTER(Error_Control_Block)]
        self.IGR_Extend_Stream.restype = IGR_RETURN_CODE

        self.IGR_Get_Memory_Status = self._libISYS11df.IGR_Get_Memory_Status
        self.IGR_Get_Memory_Status.argtypes = [ctypes.c_char_p, ctypes.c_size_t]
        self.IGR_Get_Memory_Status.restype = ctypes.c_size_t

        self.IGR_Get_Image_Entry = self._libISYS11df.IGR_Get_Image_Entry
        self.IGR_Get_Image_Entry.argtypes = [IGR_LONG, ctypes.POINTER(None), ctypes.POINTER(None), ctypes.POINTER(IGR_LONGLONG), ctypes.POINTER(IGR_LONGLONG), ctypes.POINTER(Error_Control_Block)]
        self.IGR_Get_Image_Entry.restype = IGR_RETURN_CODE

        self.IGR_Extract_Image = self._libISYS11df.IGR_Extract_Image
        self.IGR_Extract_Image.argtypes = [IGR_LONG, ctypes.POINTER(None), ctypes.POINTER(None), ctypes.POINTER(Error_Control_Block)]
        self.IGR_Extract_Image.restype = IGR_RETURN_CODE

        self.IGR_Extract_Image_Stream = self._libISYS11df.IGR_Extract_Image_Stream
        self.IGR_Extract_Image_Stream.argtypes = [IGR_LONG, ctypes.POINTER(None), ctypes.POINTER(ctypes.POINTER(IGR_Stream)), ctypes.POINTER(Error_Control_Block)]
        self.IGR_Extract_Image_Stream.restype = IGR_RETURN_CODE

        self.IGR_Calculate_MD5 = self._libISYS11df.IGR_Calculate_MD5
        self.IGR_Calculate_MD5.argtypes = [ctypes.POINTER(IGR_Stream), ctypes.POINTER(None), ctypes.POINTER(Error_Control_Block)]
        self.IGR_Calculate_MD5.restype = IGR_RETURN_CODE

        self.IGR_Calculate_SHA1 = self._libISYS11df.IGR_Calculate_SHA1
        self.IGR_Calculate_SHA1.argtypes = [ctypes.POINTER(IGR_Stream), ctypes.POINTER(None), ctypes.POINTER(Error_Control_Block)]
        self.IGR_Calculate_SHA1.restype = IGR_RETURN_CODE

        self.IGR_Get_Page_Count = self._libISYS11df.IGR_Get_Page_Count
        self.IGR_Get_Page_Count.argtypes = [IGR_LONG, ctypes.POINTER(IGR_LONG), ctypes.POINTER(Error_Control_Block)]
        self.IGR_Get_Page_Count.restype = IGR_RETURN_CODE

        self.IGR_Open_Page = self._libISYS11df.IGR_Open_Page
        self.IGR_Open_Page.argtypes = [IGR_LONG, IGR_LONG, ctypes.POINTER(HPAGE), ctypes.POINTER(Error_Control_Block)]
        self.IGR_Open_Page.restype = IGR_RETURN_CODE

        self.IGR_Close_Page = self._libISYS11df.IGR_Close_Page
        self.IGR_Close_Page.argtypes = [HPAGE, ctypes.POINTER(Error_Control_Block)]
        self.IGR_Close_Page.restype = IGR_RETURN_CODE

        self.IGR_Get_Page_Word_Count = self._libISYS11df.IGR_Get_Page_Word_Count
        self.IGR_Get_Page_Word_Count.argtypes = [HPAGE, ctypes.POINTER(IGR_LONG), ctypes.POINTER(Error_Control_Block)]
        self.IGR_Get_Page_Word_Count.restype = IGR_RETURN_CODE

        self.IGR_Get_Page_Words = self._libISYS11df.IGR_Get_Page_Words
        self.IGR_Get_Page_Words.argtypes = [HPAGE, IGR_LONG, ctypes.POINTER(IGR_LONG), ctypes.POINTER(IGR_Page_Word), ctypes.POINTER(Error_Control_Block)]
        self.IGR_Get_Page_Words.restype = IGR_RETURN_CODE

        self.IGR_Get_Page_Dimensions = self._libISYS11df.IGR_Get_Page_Dimensions
        self.IGR_Get_Page_Dimensions.argtypes = [HPAGE, ctypes.POINTER(IGR_LONG), ctypes.POINTER(IGR_LONG), ctypes.POINTER(Error_Control_Block)]
        self.IGR_Get_Page_Dimensions.restype = IGR_RETURN_CODE

        self.IGR_Get_Page_Text = self._libISYS11df.IGR_Get_Page_Text
        self.IGR_Get_Page_Text.argtypes = [HPAGE, ctypes.POINTER(None), ctypes.POINTER(IGR_LONG), ctypes.POINTER(Error_Control_Block)]
        self.IGR_Get_Page_Text.restype = IGR_RETURN_CODE

        self.IGR_Get_Page_Image_Entry = self._libISYS11df.IGR_Get_Page_Image_Entry
        self.IGR_Get_Page_Image_Entry.argtypes = [HPAGE, ctypes.POINTER(None), ctypes.POINTER(None), ctypes.POINTER(IGR_LONGLONG), ctypes.POINTER(IGR_LONGLONG), ctypes.POINTER(Error_Control_Block)]
        self.IGR_Get_Page_Image_Entry.restype = IGR_RETURN_CODE

        self.IGR_Extract_Page_Image = self._libISYS11df.IGR_Extract_Page_Image
        self.IGR_Extract_Page_Image.argtypes = [HPAGE, ctypes.POINTER(None), ctypes.POINTER(None), ctypes.POINTER(Error_Control_Block)]
        self.IGR_Extract_Page_Image.restype = IGR_RETURN_CODE

        self.IGR_Extract_Page_Image_Stream = self._libISYS11df.IGR_Extract_Page_Image_Stream
        self.IGR_Extract_Page_Image_Stream.argtypes = [HPAGE, ctypes.POINTER(None), ctypes.POINTER(ctypes.POINTER(IGR_Stream)), ctypes.POINTER(Error_Control_Block)]
        self.IGR_Extract_Page_Image_Stream.restype = IGR_RETURN_CODE

        self.IGR_Get_Bookmark_Root = self._libISYS11df.IGR_Get_Bookmark_Root
        self.IGR_Get_Bookmark_Root.argtypes = [IGR_LONG, ctypes.POINTER(IGR_Bookmark), ctypes.POINTER(Error_Control_Block)]
        self.IGR_Get_Bookmark_Root.restype = IGR_RETURN_CODE

        self.IGR_Get_Bookmark_First_Child = self._libISYS11df.IGR_Get_Bookmark_First_Child
        self.IGR_Get_Bookmark_First_Child.argtypes = [IGR_LONG, ctypes.POINTER(IGR_Bookmark), ctypes.POINTER(IGR_Bookmark), ctypes.POINTER(Error_Control_Block)]
        self.IGR_Get_Bookmark_First_Child.restype = IGR_RETURN_CODE

        self.IGR_Get_Bookmark_Next_Sibling = self._libISYS11df.IGR_Get_Bookmark_Next_Sibling
        self.IGR_Get_Bookmark_Next_Sibling.argtypes = [IGR_LONG, ctypes.POINTER(IGR_Bookmark), ctypes.POINTER(IGR_Bookmark), ctypes.POINTER(Error_Control_Block)]
        self.IGR_Get_Bookmark_Next_Sibling.restype = IGR_RETURN_CODE

        self.IGR_Make_Output_Canvas = self._libISYS11df.IGR_Make_Output_Canvas
        self.IGR_Make_Output_Canvas.argtypes = [IGR_LONG, ctypes.POINTER(None), ctypes.POINTER(None), ctypes.POINTER(HCANVAS), ctypes.POINTER(Error_Control_Block)]
        self.IGR_Make_Output_Canvas.restype = IGR_RETURN_CODE

        self.IGR_Make_Output_Canvas_On = self._libISYS11df.IGR_Make_Output_Canvas_On
        self.IGR_Make_Output_Canvas_On.argtypes = [IGR_LONG, ctypes.POINTER(None), ctypes.POINTER(None), ctypes.POINTER(HCANVAS), ctypes.POINTER(Error_Control_Block)]
        self.IGR_Make_Output_Canvas_On.restype = IGR_RETURN_CODE

        self.IGR_Close_Canvas = self._libISYS11df.IGR_Close_Canvas
        self.IGR_Close_Canvas.argtypes = [HCANVAS, ctypes.POINTER(Error_Control_Block)]
        self.IGR_Close_Canvas.restype = IGR_RETURN_CODE

        self.IGR_Render_Page = self._libISYS11df.IGR_Render_Page
        self.IGR_Render_Page.argtypes = [HPAGE, HCANVAS, ctypes.POINTER(Error_Control_Block)]
        self.IGR_Render_Page.restype = IGR_RETURN_CODE

        self.IGR_Render_Page_Ex = self._libISYS11df.IGR_Render_Page_Ex
        self.IGR_Render_Page_Ex.argtypes = [HPAGE, HCANVAS, ctypes.POINTER(None), ctypes.POINTER(IGR_Render_Page_Properties), ctypes.POINTER(Error_Control_Block)]
        self.IGR_Render_Page_Ex.restype = IGR_RETURN_CODE

        self.IGR_Redact_Page_Text = self._libISYS11df.IGR_Redact_Page_Text
        self.IGR_Redact_Page_Text.argtypes = [HPAGE, IGR_LONG, IGR_LONG, IGR_LONG, ctypes.POINTER(Error_Control_Block)]
        self.IGR_Redact_Page_Text.restype = IGR_RETURN_CODE

        self.IGR_Get_Page_Attribute = self._libISYS11df.IGR_Get_Page_Attribute
        self.IGR_Get_Page_Attribute.argtypes = [HPAGE, ctypes.POINTER(None), ctypes.POINTER(None), ctypes.POINTER(IGR_LONG), ctypes.POINTER(Error_Control_Block)]
        self.IGR_Get_Page_Attribute.restype = IGR_RETURN_CODE

        self.IGR_Get_Format_Attribute = self._libISYS11df.IGR_Get_Format_Attribute
        self.IGR_Get_Format_Attribute.argtypes = [IGR_LONG, IGR_LONG, ctypes.c_char_p, ctypes.POINTER(Error_Control_Block)]
        self.IGR_Get_Format_Attribute.restype = IGR_RETURN_CODE

        self.IGR_Get_Option_Attribute = self._libISYS11df.IGR_Get_Option_Attribute
        self.IGR_Get_Option_Attribute.argtypes = [IGR_LONG, IGR_LONG, ctypes.c_char_p, ctypes.c_size_t, ctypes.POINTER(Error_Control_Block)]
        self.IGR_Get_Option_Attribute.restype = IGR_RETURN_CODE
